@@ -10,6 +10,9 @@
 	<string id="30007">roku</string>
 	<string id="30008">data přidání</string>
 	<string id="30009">hodnocení</string>
+	<string id="30010">Vyhledat na ulozto.cz</string>
+	<string id="30011">Předchozí</string>
+	<string id="30012">Další</string>
 	<string id="30030">Složka pro stahování</string>
 	<string id="30031">Nastavte prosím složku pro stahování</string>
 	<string id="30032">Zobrazovat stav stahování</string>
@@ -17,4 +20,5 @@
 	<string id="30034">10%</string>
 	<string id="30035">5%</string>
 	<string id="30036">1%</string>
+	<string id="30037">Stažené soubory</string>
 </strings>
