@@ -19,8 +19,8 @@
 # *  http://www.gnu.org/copyleft/gpl.html
 # *
 # */
-import re,urllib,urllib2,random,util
-
+import re,urllib,urllib2,random,util,sys,os
+import xbmc,xbmcplugin
 def supports(url):
 	return not _regex(url) == None
 
@@ -60,7 +60,7 @@ def url(url):
 			return stream
 
 def _regex(url):
-	return re.search('uloz\.to',url,re.IGNORECASE | re.DOTALL)
+	return re.search('ulozto\.cz',url,re.IGNORECASE | re.DOTALL)
 
 class MyHTTPRedirectHandler(urllib2.HTTPRedirectHandler):
 
@@ -68,3 +68,56 @@ class MyHTTPRedirectHandler(urllib2.HTTPRedirectHandler):
 		self.location = headers.getheader('Location')
 		# this will lead to exception when 302 is recieved
 		# exactly what we want - not to open url that's being redirected to
+
+def icon(icon):
+	icon_file = os.path.join(__addon__.getAddonInfo('path'),'resources','icons',icon)
+	if not os.path.isfile(icon_file):
+		return 'DefaultFolder.png'
+	return icon_file
+
+def search_list():
+	util.add_dir(__language__(30004),{'search-ulozto':''},icon('search.png'))
+	for what in util.get_searches(__addon__,'search_history_ulozto'):
+		util.add_dir(what,{'search-ulozto':what})
+	xbmcplugin.endOfDirectory(int(sys.argv[1]))
+
+def search(what):
+	if what == '':
+		kb = xbmc.Keyboard('',__language__(30003),False)
+		kb.doModal()
+		if kb.isConfirmed():
+			what = kb.getText()
+	if not what == '':
+		maximum = 20
+		try:
+			maximum = int(__addon__.getSetting('keep-searches'))
+		except:
+			util.error('Unable to parse convert addon setting to number')
+			pass
+
+		util.add_search(__addon__,'search_history_ulozto',what,maximum)
+		return list_page('http://www.ulozto.cz/hledej/?disclaimer=0&media=video&q='+urllib.quote(what))
+
+def list_page(url):
+	base_url = 'http://www.ulozto.cz'
+	util.init_urllib()
+	data = util.request(url+'&do=ajaxSearch',headers={'X-Requested-With':'XMLHttpRequest'})
+	data = data.replace('null','None')
+	page = eval(data)['snippets']['snippet--mainSearch'].replace('\\','')
+	data = util.substr(page,'<ul class=\"thumbs','</ul>') 
+	for m in re.finditer('<a href=\"(?P<url>[^\"]+)[^>]+>[^<]+<img(.+?)src=\"(?P<logo>[^\"]+)(.+?)alt=\"(?P<name>[^\"]+)(.+?)<span class=\"rght[^>]+>(?P<size>[^<]+)',data, re.IGNORECASE|re.DOTALL):
+		iurl=base_url+m.group('url')
+		util.add_video('%s (%s)' % (m.group('name'),m.group('size')),
+			{'play':iurl},
+			m.group('logo'),
+			menuItems={xbmc.getLocalizedString(33003):{'name':m.group('name'),'download':iurl}}
+			)
+	# page naviagation
+	data = util.substr(page,'<div class=\"paginator','</div')
+	mprev = re.search('<a class=\"prev(.+?)href=\"(?P<url>[^\"]+)',data)
+	if mprev:
+		util.add_dir(__language__(30011),{'list-ulozto':base_url+mprev.group('url')},icon('prev.png'))
+	mnext = re.search('<a class=\"next(.+?)href=\"(?P<url>[^\"]+)',data)
+	if mnext:
+		util.add_dir(__language__(30012),{'list-ulozto':base_url+mnext.group('url')},icon('next.png'))
+	xbmcplugin.endOfDirectory(int(sys.argv[1]))
